tests/dataset/tpc-ds/compiler/kotlin/q11.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q11.kt:36:12: error: redeclaration: Customer
data class Customer(var c_customer_sk: Int, var c_customer_id: String, var c_first_name: String, var c_last_name: String)
           ^
/tmp/q11.kt:42:12: error: redeclaration: Customer
data class Customer(var c_customer_sk: Int, var c_customer_id: String, var c_first_name: String, var c_last_name: String)
           ^
/tmp/q11.kt:94:57: error: type mismatch: inferred type is Number but Boolean was expected
val growth_ok = toDouble(toDouble(toDouble(ws98) > 0 && ss98) > 0 && (toDouble(ws99) / toDouble(ws98))) > toDouble((toDouble(ss99) / toDouble(ss98)))
                                                        ^
/tmp/q11.kt:94:71: error: type mismatch: inferred type is Double but Boolean was expected
val growth_ok = toDouble(toDouble(toDouble(ws98) > 0 && ss98) > 0 && (toDouble(ws99) / toDouble(ws98))) > toDouble((toDouble(ss99) / toDouble(ss98)))
                                                                      ^
